@@ -3,8 +3,8 @@
 
 	<data>
 		<key>content</key>
-		<version>5.0.9</version>
-		<lastMod>2012-11-14</lastMod>
+		<version>5.0.10</version>
+		<lastMod>2012-11-20</lastMod>
 
 		<name><![CDATA[Contenu]]></name>
 		<description><![CDATA[Gérer les pages de votre site internet, les catégories.]]></description>
